# template_bind_cpp_python

./: .clang-format  .clang-tidy  .clangd  .cz.toml  .gitignore  .gitmessage  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  CMakeLists.txt  CMakePresets.json  README.md  compile_flags.txt  dprint.json  install_cppcheck.sh  noxfile.py  pixi.toml  pyproject.toml
.zed/: debug.json  tasks.json
cmake/: coverage.cmake  quality-tools.cmake
debug/: CMakeLists.txt  main_debug.cpp
docs/: clang-tidy-check-list.md  cross-platform.md  developer-guide.md  development-rules.md  development-spec.md  implementation-status.md  user-guide.md
examples/: basic_usage.py
include/: fast_class.hpp  rand.hpp  simple_function.hpp
scripts/: benchmark_hamming.py  build_wheels.sh  check_docstring.py  ci_test.sh  quick_test.sh  setup_environment.sh  upload_gitlab.sh
src/bindings/: CMakeLists.txt  nb_bindings.cpp  nb_rand.cpp  pb_rand.cpp
src/core/: CMakeLists.txt  debug_main.cpp  fast_class.cpp  rand.cpp  simple_function.cpp
src/python_implementations/: __init__.py  fast_math.py
src/template_bind_cpp_python/: __init__.py  __init__.pyi  cli.py  module_core.pyi
tests/cpp/: CMakeLists.txt  test_hamming.cpp  test_rand.cpp
tests/python/: test_modules.py  test_rand.py
toolchains/: llvm-toolchain.cmake
